# i18n

./: .coveragerc  .gitignore  CHANGELOG.md  CODE_DE_CONDUITE.md  CODE_OF_CONDUCT.md  LICENCE.md  LICENSE.md  README.fr.md  README.md  pyproject.toml  requirements.dev.txt  requirements.prod.txt  requirements.test.txt  requirements.txt  tox.ini
.github/workflows/: ci.yaml  python-ci.yaml
.tox-config/: coverage-version.txt  versions.txt
.tox-config/requirements/: format.txt  full.txt  type-check.txt
.tox-config/scripts/: coverage.sh  test.sh
docs/: Makefile
docs/conf/: .readthedocs.yaml
docs/source/: api.rst  conf.py  getting_started.rst  index.rst  indices.rst  install.rst  introduction.rst  org.rst
docs/source/api/: api.rst  config.rst  constant.rst  converter.rst  formatter.rst  global.rst  index.rst  internal.rst  loader.rst  main_variables.rst
docs/source/api/loader/: handler.rst  repository.rst  utils.rst
docs/source/api/modules/: api.rst  config.rst  converter.rst  formatter.rst  locale.rst  patterns.rst
docs/source/api/modules/loaders/: handler.rst  index.rst  loader.rst  repository.rst  utils.rst
docs/source/api/modules/models/: corpus.rst  index.rst  repository.rst
docs/source/concept/: conversions.rst  format.rst  index.rst  repository.rst
src/i18n_tools/: __init__.py  __static__.py  api.py  classes.py  config.py  converter.py  core.py  exceptions.py  fallback.py  formatter.py  loader.py  locale.py  manager.py  patterns.py  sync.py
src/i18n_tools/loaders/: __init__.py  configuration.py  handler.py  loader.py  repository.py  utils.py
src/i18n_tools/models/: __init__.py  author.py  corpus.py  init.py  repository.py  translator.py
stubs/ndict_tools/: __init__.pyi
tests/: conftest.py  helpers.py  parametrize.yaml  pause_test_00_api.py  test_00_api.py  test_00_config.py  test_00_locale.py  test_00_message.py  test_00_module_loaders.py  test_00_module_loaders_00.py  test_00_module_loaders_00_utils.py  test_00_module_loaders_01.py  test_00_module_loaders_01_handler.py  test_00_module_loaders_01_repository.py  test_00_module_loaders_02.py  test_01_config.py  test_01_loaders.py  test_01_sync.py  test_02_converter.py  test_02_manager.py  test_04_sync.py  test_99_translators.py  test_message.py  untest_00_module_loaders_00.py  untest_00_module_loaders_01.py  untest_00_module_loaders_02.py  untest_01_config.py  untest_01_sync.py  untest_02_converter.py  untest_99_translators.py  untest_message.py
tests/00_api/: conftest.py  test_00_api.py
tests/00_locale/: test_00_locale.py
tests/01_loader/: conftest.py  test_00_loader.py  test_01_loader.py  test_02_loader.py  test_03_loader.py
tests/02_models/: conftest.py  test_00_message.py  test_00_respository.py  test_01_book.py  test_02_corpus.py
tests/09_config/: conftest.py  test_config.py
tests/loader/: test_00_loader.py  test_01_loader.py  test_02_loader.py  test_03_loader.py
tests/locales/: error-i18n-tools.yaml  i18n-tools.json  i18n-tools.toml  i18n-tools.yaml  valid-i18n-tools.yaml
tests/mock/application/discotheque/locales/_i18n_tools/: i18n-tools.json
tests/mock/application/fsm_tools/locales/_i18n_tools/: failed-i18n-tools.yaml  i18n-tools.yaml
tests/mock/application/fsm_tools/locales/en/LC_MESSAGES/: usage.mo  usage.po
tests/mock/application/fsm_tools/locales/templates/: usage.pot
tests/mock/application/locales/_i18n_tools/: i18n-tools.yaml
tests/mock/package/i18n_tools/locales/_i18n_tools/: i18n-tools.json  i18n-tools.toml  i18n-tools.yaml
tests/mock/package/locales/_i18n_tools/: i18n-tools.yaml
tests/models/: conftest.py  test_00_message.py  test_00_respository.py  test_01_book.py
