[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "i18n-tools"
version = "0.0.1"
authors = [
    { name = "biface" }
]
description = "Toolbox to manage localized messages with json and gettext functions."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: CeCILL-C Free Software License Agreement (CECILL-C)",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
]
dependencies = [
    "ndict-tools>=0.6.0"
]

[project.optional-dependencies]
test = [
    "pytest",
    "coverage",
    "pytest-cov",
    "flake8",
    "pylint",
    "black",
    "isort",
    "bandit"
]

[tool.tox]
envlist = ["lint", "format", "pytest", "security", "local", "ci"]

# Définition des environnements
[testenv]
deps = [
    "pytest",
    "flake8",
    "pylint",
    "black",
    "isort",
    "bandit"
]

[testenv.lint]
description = "Lint the code"
deps = [
    "flake8"
]
commands = [
    "flake8 src tests --format=default --statistics --show-source --count -v"
]

[testenv.format]
description = "Check code formatting"
deps = [
    "black",
    "isort"
]
commands = [
    "black --check src tests -v",
    "isort --check-only src tests -v"
]

[testenv.pytest]
description = "Run tests without coverage"
deps = [
    "pytest"
]
commands = [
    "pytest {posargs} -v"
]

[testenv.security]
description = "Run security checks"
deps = [
    "bandit"
]
commands = [
    "bandit -r src -v"
]

[testenv.local]
description = "Run all checks locally without coverage"
deps = [
    "pytest",
    "flake8",
    "pylint",
    "black",
    "isort",
    "bandit"
]
commands = [
    "tox -e lint",
    "tox -e format",
    "tox -e pytest",
    "tox -e security"
]

[testenv.ci]
description = "Run all checks on CI with coverage"
deps = [
    "pytest",
    "pytest-cov",
    "coverage",
    "flake8",
    "pylint",
    "black",
    "isort",
    "bandit"
]
commands = [
    "flake8 src tests --format=default --statistics --show-source --count -v",
    "black --check src tests -v",
    "isort --check-only src tests -v",
    "bandit -r src -v",
    "coverage run -m pytest --cov=src/i18n_tools --cov-report=xml -v",
    "coverage xml"
]