# =============================================================================
# pyproject.toml — i18n-tools
# =============================================================================
# Build system, project metadata, runtime dependencies, optional extras,
# and development dependency groups (PEP 735, managed by uv).
#
# Tool configuration (flake8, isort, pytest) is also consolidated here.
# tox configuration lives in tox.ini (phase 1); merge planned for a later
# cycle once the CI pipeline is stable.
#
# Dependency groups:
#   uv sync --group dev    — full development toolchain (tox, quality, tests)
#   uv sync --group docs   — Sphinx documentation build only
# =============================================================================

# -----------------------------------------------------------------------------
# Build system
# -----------------------------------------------------------------------------
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# -----------------------------------------------------------------------------
# Project metadata
# -----------------------------------------------------------------------------
[project]
name = "i18n-tools"
version = "0.5.0"
authors = [
    { name = "biface" },
]
description = "Toolbox to manage localized messages with json and gettext functions."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: CeCILL-C Free Software License Agreement (CECILL-C)",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
]

# -----------------------------------------------------------------------------
# Runtime dependencies — required by any consumer of the package
# -----------------------------------------------------------------------------
dependencies = [
    "ndict-tools>=1.2.0",
    "babel",
    "langcodes",        # IETF tag normalisation — locale.py (DD-14)
    "email-validator",  # email validation — config.py
    "toml",             # .toml file loading — loaders/utils.py
    "PyYAML",           # .yaml / .i18t file loading — loaders/utils.py
    "requests",         # HTTP calls — api.py (validate_api_url)
    "validators",       # URL syntax check — api.py (validate_url_format, DD-37)
]

# -----------------------------------------------------------------------------
# Project URLs
# -----------------------------------------------------------------------------
[project.urls]
Homepage   = "https://github.com/biface/i18n"
Repository = "https://github.com/biface/i18n.git"
Issues     = "https://github.com/biface/i18n/issues"

# -----------------------------------------------------------------------------
# Optional extras — for consumers who want to run the test suite
# without the full development toolchain
# -----------------------------------------------------------------------------
[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
]

# -----------------------------------------------------------------------------
# Development dependency groups (PEP 735) — managed exclusively by uv
# Not installed when a user does `pip install i18n-tools`
#
# Usage:
#   uv sync --group dev    → installs tox, quality tools, test runners
#   uv sync --group docs   → installs Sphinx and theme
#   uv sync --group dev --group docs  → both at once
# -----------------------------------------------------------------------------
[dependency-groups]
dev = [
    # tox orchestration
    "tox>=4.0",
    "tox-uv",
    # test runners
    "pytest",
    "pytest-cov",
    # quality — static analysis
    "basedpyright",
    # quality — linting and formatting
    "flake8",
    "black",
    "isort",
    # quality — security
    "bandit",
]
docs = [
    "Sphinx",
    "furo",
]

# -----------------------------------------------------------------------------
# Tool configuration
# -----------------------------------------------------------------------------

[tool.basedpyright]
pythonVersion = "3.10"
pythonPlatform = "Linux"
venvPath = "."
venv = ".venv"
stubPath = "stubs"
reportMissingTypeStubs = false
reportUnknownVariableType = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownParameterType = false
reportAny = false

[tool.flake8]
max-line-length = 88
ignore = ["E501"]
extend-ignore = ["E203", "W503"]
exclude = [".tox", ".git", "__pycache__", "build", "dist"]

[tool.isort]
profile = "black"
line_length = 88
known_first_party = "i18n_tools"
multi_line_output = 3
include_trailing_comma = true

[tool.pytest.ini_options]
markers = [
    "network: mark test as requiring real network access (deactivated on dev branches)",
    "timeout: mark test as making slow HTTP calls (excluded from CI)",
]
